# emotions-app

./: CMakeLists.txt  README.md  emotions-app-install.sh
cmake_modules/: Macros.cmake
common/: AFaceListener.hpp  PlottingImageListener.hpp  StatusListener.hpp
emotions-app/: CMakeLists.txt  emotions-app.cpp  packages.config
